# adaptive_isotropic_remeshing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  version.h.in
resource/: .gitignore  nefratiti_orig.ply
src/: adaptive_remesh_botsch.cpp  adaptive_remesh_botsch.h  bindings.cpp  collapse_edges.cpp  equalize_valences.cpp  split_edges.cpp  split_edges_until_bound.cpp  tangential_smoothing.cpp  tangential_smoothing.h
